# ravi-matrix

./: CMakeLists.txt  README.rst
cmake/: FindOpenBLAS.cmake  FindRAVI.cmake  FindRaviLuaUTILS.cmake
include/: matrixlib.h  ravi_linalg.h  ravi_matrix.h  ravi_matrix_conf.h  ravi_matrixlib.h  ravimatrix-conf.h
include/ravimatrix/: conf.h  matrix.h  matrixlib.h  ravi_matrix.h
src/: matrix.c  matrixlib.c  ravi_matrix.c
tests/: gaussian.lua  gaussian2.lua  matmul1.lua  test.lua
testsrc/: test_matrix.c
